added tags to test

--- a/report.html
+++ b/report.html
@@ -1557,25 +1557,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,142220],[],[[4,0,1,0,[],[1,113,10592],[]],[5,0,1,0,[],[1,10710,10113],[]],[6,0,1,0,[],[1,20829,12318],[]],[7,0,1,0,[],[1,33150,10339],[]],[8,0,1,0,[],[1,43497,29946],[]],[9,0,1,0,[],[1,73446,11559],[]],[10,0,1,0,[],[1,85008,11489],[]],[11,0,1,0,[],[1,96502,10314],[]],[12,0,1,0,[],[1,106822,11953],[]],[13,0,1,0,[],[1,118783,11770],[]],[14,0,1,0,[],[1,130557,11656],[]]],[],[11,11,11,11]];
+window.output["suite"] = [1,2,3,0,[],[1,0,155829],[],[[4,0,1,0,[5],[1,111,11248],[]],[6,0,1,0,[5],[1,11369,11347],[]],[7,0,1,0,[5],[1,22725,13499],[]],[8,0,1,0,[5],[1,36234,11347],[]],[9,0,1,0,[5],[1,47590,32746],[]],[10,0,1,0,[11],[1,80339,13195],[]],[12,0,1,0,[11],[1,93542,13222],[]],[13,0,1,0,[11],[1,106773,10462],[]],[14,0,1,0,[11],[1,117250,12827],[]],[15,0,1,0,[11],[1,130079,12834],[]],[16,0,1,0,[11],[1,142922,12895],[]]],[],[11,11,11,11]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Agustin\\Desktop\\universidad\\10\\Testing\\Tarea\\iic3143-proyecto-g8\\Tests.rst","*Tests.rst","*Teacher can create an account and will be automatically logged in","*Student can create an account and will be automatically logged in","*Can't create user with used email","*Can't create user if password doesn't match confirmation","*Can't create user if all fields are not filled in","*Teacher can login with correct credentials","*Student can login with correct credentials","*User can't login if it doesn't exist","*User can't login with wrong credentials","*Teacher can't login as student","*Student can't login as teacher"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\Agustin\\Desktop\\universidad\\10\\Testing\\Tarea\\iic3143-proyecto-g8\\Tests.rst","*Tests.rst","*Teacher can create an account and will be automatically logged in","*Creating Users","*Student can create an account and will be automatically logged in","*Can't create user with used email","*Can't create user if password doesn't match confirmation","*Can't create user if all fields are not filled in","*Teacher can login with correct credentials","*Logging In","*Student can login with correct credentials","*User can't login if it doesn't exist","*User can't login with wrong credentials","*Teacher can't login as student","*Student can't login as teacher"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:22","fail":0,"label":"Critical Tests","pass":11},{"elapsed":"00:02:22","fail":0,"label":"All Tests","pass":11}],[],[{"elapsed":"00:02:22","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":11}]];
+window.output["stats"] = [[{"elapsed":"00:02:36","fail":0,"label":"Critical Tests","pass":11},{"elapsed":"00:02:36","fail":0,"label":"All Tests","pass":11}],[{"elapsed":"00:01:20","fail":0,"label":"Creating Users","pass":5},{"elapsed":"00:01:15","fail":0,"label":"Logging In","pass":6}],[{"elapsed":"00:02:36","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":11}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1474407500459;
+window.output["baseMillis"] = 1474548251235;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 141541;
+window.output["generatedMillis"] = 155765;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160920 18:40:42 GMT -03:00";
+window.output["generatedTimestamp"] = "20160922 09:46:47 GMT -03:00";
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
