--- a/report.html
+++ b/report.html
@@ -1557,25 +1557,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,168136],[],[[4,0,1,0,[5],[1,112,8177],[]],[6,0,1,0,[5],[1,8290,6669],[]],[7,0,1,0,[5],[1,14960,8055],[]],[8,0,1,0,[5],[1,23016,5303],[]],[9,0,1,0,[5],[1,28320,17364],[]],[10,0,1,0,[11],[1,45685,6758],[]],[12,0,1,0,[11],[1,52444,7025],[]],[13,0,1,0,[11],[1,59470,5067],[]],[14,0,1,0,[11],[1,64537,7193],[]],[15,0,1,0,[11],[1,71731,7700],[]],[16,0,1,0,[11],[1,79432,6466],[]],[17,0,1,0,[],[1,85899,8568],[]],[18,0,1,0,[],[1,94468,9973],[]],[19,0,1,0,[],[1,104443,11286],[]],[20,0,1,0,[],[1,115730,7867],[]],[21,0,1,0,[],[1,123598,7428],[]],[22,0,1,0,[],[1,131027,8918],[]],[23,0,1,0,[],[1,139947,6445],[]],[24,0,1,0,[],[1,146393,6493],[]],[25,0,1,0,[],[1,152887,8061],[]],[26,0,1,0,[],[1,160949,7184],[]]],[],[21,21,21,21]];
+window.output["suite"] = [1,2,3,0,[],[1,0,182619],[],[[4,0,1,0,[5],[1,92,10060],[]],[6,0,1,0,[5],[1,10153,6030],[]],[7,0,1,0,[5],[1,16184,7031],[]],[8,0,1,0,[5],[1,23216,5875],[]],[9,0,1,0,[5],[1,29093,15398],[]],[10,0,1,0,[11],[1,44492,6854],[]],[12,0,1,0,[11],[1,51347,7259],[]],[13,0,1,0,[11],[1,58607,6441],[]],[14,0,1,0,[11],[1,65049,12362],[]],[15,0,1,0,[11],[1,77412,8600],[]],[16,0,1,0,[11],[1,86013,7827],[]],[17,0,1,0,[18],[1,93841,9336],[]],[19,0,1,0,[18],[1,103177,10405],[]],[20,0,1,0,[18],[1,113583,11076],[]],[21,0,1,0,[18],[1,124661,7561],[]],[22,0,1,0,[18],[1,132223,7909],[]],[23,0,1,0,[18],[1,140132,7740],[]],[24,0,1,0,[18],[1,147873,7420],[]],[25,0,1,0,[18],[1,155293,6934],[]],[26,0,1,0,[18],[1,162228,9556],[]],[27,0,1,0,[18],[1,171784,10832],[]]],[],[21,21,21,21]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/diego/Desktop/iic3143-proyecto-g8/Tests.rst","*Tests.rst","*Teacher can create an account and will be automatically logged in","*Creating Users","*Student can create an account and will be automatically logged in","*Can't create user with used email","*Can't create user if password doesn't match confirmation","*Can't create user if all fields are not filled in","*Teacher can login with correct credentials","*Logging In","*Student can login with correct credentials","*User can't login if it doesn't exist","*User can't login with wrong credentials","*Teacher can't login as student","*Student can't login as teacher","*Create new form with all type of questions","*Allow form to have more than one of each type of question","*Multiplechoice question can't be created if not all fields are filled","*True or false question can't be created with empty fields","*Numeric questions can't be created with empty fields","*Short answer questions can't be created with empty fields","*Long answer questions can't be created with empty fields","*Can't create new form with empty title","*Edit form correctly","*Delete form correctly"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/diego/Desktop/iic3143-proyecto-g8/Tests.rst","*Tests.rst","*Teacher can create an account and will be automatically logged in","*Creating Users","*Student can create an account and will be automatically logged in","*Can't create user with used email","*Can't create user if password doesn't match confirmation","*Can't create user if all fields are not filled in","*Teacher can login with correct credentials","*Logging In","*Student can login with correct credentials","*User can't login if it doesn't exist","*User can't login with wrong credentials","*Teacher can't login as student","*Student can't login as teacher","*Create new form with all type of questions","*Forms","*Allow form to have more than one of each type of question","*Multiplechoice question can't be created if not all fields are filled","*True or false question can't be created with empty fields","*Numeric questions can't be created with empty fields","*Short answer questions can't be created with empty fields","*Long answer questions can't be created with empty fields","*Can't create new form with empty title","*Edit form correctly","*Delete form correctly"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:48","fail":0,"label":"Critical Tests","pass":21},{"elapsed":"00:02:48","fail":0,"label":"All Tests","pass":21}],[{"elapsed":"00:00:46","fail":0,"label":"Creating Users","pass":5},{"elapsed":"00:00:40","fail":0,"label":"Logging In","pass":6}],[{"elapsed":"00:02:48","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":21}]];
+window.output["stats"] = [[{"elapsed":"00:03:03","fail":0,"label":"Critical Tests","pass":21},{"elapsed":"00:03:03","fail":0,"label":"All Tests","pass":21}],[{"elapsed":"00:00:44","fail":0,"label":"Creating Users","pass":5},{"elapsed":"00:01:29","fail":0,"label":"Forms","pass":10},{"elapsed":"00:00:49","fail":0,"label":"Logging In","pass":6}],[{"elapsed":"00:03:03","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":21}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1474570318569;
+window.output["baseMillis"] = 1474571268599;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 167431;
+window.output["generatedMillis"] = 182401;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160922 15:54:46 GMT -03:00";
+window.output["generatedTimestamp"] = "20160922 16:10:51 GMT -03:00";
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
